@@ -1,0 +1,5 @@
+#
+#	x86 low-level entry points
+#
+
+obj-y := entry_$(BITS).o
